--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -1,14 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".Fragments.EditProfileFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".Fragments.Register"
+              android:orientation="vertical"
+              android:padding="10dp"
+              android:background="#fcfcfc"
+              android:gravity="center">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="-60dp"
+            android:textSize="18dp"
+            android:text="Edit User Information"
+            android:textStyle="bold" />
 
-</FrameLayout>
+    <LinearLayout
+            android:clipToPadding="false"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <androidx.cardview.widget.CardView
+                android:clickable="true"
+                android:id="@+id/Register"
+                android:layout_width="400dp"
+                android:layout_height="170dp"
+                android:layout_margin="10dp">
+
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:id="@+id/TextViewPassword"
+                        android:layout_width="9dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="60dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="18dp"
+                        android:text="Password:"
+                        android:textStyle="italic"
+                        android:layout_weight="1"/>
+
+                <EditText
+                        android:id="@+id/Password"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="40dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:inputType="textPassword"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:id="@+id/TextViewConfirmPassword"
+                        android:layout_width="9dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="60dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="18dp"
+                        android:text="Confirm Password:"
+                        android:textStyle="italic"
+                        android:layout_weight="1"/>
+
+                <EditText
+                        android:id="@+id/PasswordConfirmation"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="40dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:inputType="textPassword"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="80dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:id="@+id/TextViewEmail"
+                        android:layout_width="-10dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="60dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="18dp"
+                        android:text="Email:"
+                        android:textStyle="italic"/>
+
+                <EditText
+                        android:id="@+id/EmailAdress"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="40dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:inputType="textEmailAddress"/>
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="120dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:id="@+id/BillingAddress"
+                        android:layout_width="-10dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="60dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="18dp"
+                        android:text="Address:"
+                        android:textStyle="italic"/>
+
+                <EditText
+                        android:id="@+id/UserBillingAddress"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="40dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:inputType="textPostalAddress"/>
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+    <Button
+            android:text="Confirm Changes"
+            android:layout_marginRight="-10dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content" android:id="@+id/button"/>
+</LinearLayout>
