--- a/app/src/main/res/layout/fragment_start_travel.xml
+++ b/app/src/main/res/layout/fragment_start_travel.xml
@@ -5,10 +5,21 @@
              android:layout_height="match_parent"
              tools:context=".Fragments.StartTravelFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="-40dp"
+            android:orientation="vertical"
+            android:gravity="center">
+
+        <Button
+                android:text="Start Travel"
+                android:layout_width="300dp"
+                android:layout_height="70dp"
+                android:id="@+id/button"/>
+
+    </LinearLayout>
+
 
 </FrameLayout>
