--- a/app/src/main/res/layout/fragment_gantry.xml
+++ b/app/src/main/res/layout/fragment_gantry.xml
@@ -1,14 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
+              android:layout_width="match_parent"
+              android:layout_height="80dp"
+              android:id="@+id/invoice_background"
               android:orientation="horizontal">
 
     <TextView
-            android:id="@+id/item_number"
+            android:text="Gantry cordinate: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:id="@+id/gantry_cordinates"
+            android:layout_marginLeft="-10dp"
+            android:layout_marginTop="16dp"
+            android:text="x.x.x.x"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:text="Time: "
+            android:layout_marginLeft="-178dp"
+            android:layout_marginTop="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:id="@+id/item_number"
+            android:text="x.x.x.x"
+            android:layout_marginTop="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:text="Fee:"
+            android:textSize="22dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginLeft="170dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:id="@+id/invoice_payment"
+            android:text="xxx sek"
+            android:textSize="22dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginLeft="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"/>
 
     <TextView
@@ -18,3 +63,4 @@
             android:layout_margin="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem"/>
 </LinearLayout>
+
