--- a/app/src/main/res/layout/fragment_invoice.xml
+++ b/app/src/main/res/layout/fragment_invoice.xml
@@ -1,14 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
+              android:layout_width="match_parent"
+              android:layout_height="80dp"
+              android:background="@color/colorAccent"
+              android:id="@+id/invoice_background"
               android:orientation="horizontal">
 
     <TextView
-            android:id="@+id/item_number"
+            android:text="Created: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:id="@+id/item_number"
+            android:layout_marginLeft="-10dp"
+            android:layout_marginTop="16dp"
+            android:text="x.x.x.x"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:text="Due Date: "
+            android:layout_marginLeft="-116dp"
+            android:layout_marginTop="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:id="@+id/due_date"
+            android:text="x.x.x.x"
+            android:layout_marginTop="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:text="To Pay:"
+            android:textSize="22dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginLeft="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+    <TextView
+            android:id="@+id/invoice_payment"
+            android:text="xxx sek"
+            android:textSize="22dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginLeft="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"/>
 
     <TextView
