--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,12 +9,12 @@
               android:background="#fcfcfc"
               android:gravity="center">
 
-
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="-60dp"
+            android:textColor="@color/KapschOrange"
             android:textSize="18dp"
             android:text="TOLLGATE v0.01"
             android:textStyle="bold" />
@@ -58,7 +58,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="-60dp"
-                        android:layout_marginTop="13dp"
+                        android:layout_marginTop="11dp"
                         android:textSize="18dp"
                         android:text="Username:"
                         android:textStyle="italic" />
@@ -94,7 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="-60dp"
-                        android:layout_marginTop="13dp"
+                        android:layout_marginTop="11dp"
                         android:textSize="18dp"
                         android:text="Password:"
                         android:textStyle="italic" />
@@ -103,4 +103,10 @@
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+    <Button
+            android:text="Login"
+            android:textColor="@color/KapschOrange"
+            android:background="@color/cardview_light_background"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" android:id="@+id/button"/>
 </LinearLayout>
