--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -6,24 +6,19 @@
     <group android:checkableBehavior="single">
         <item
                 android:id="@+id/nav_home"
-                android:icon="@drawable/ic_menu_gallery"
                 android:title="My Invoice"/>
         <item
                 android:id="@+id/nav_gallery"
-                android:icon="@drawable/ic_menu_manage"
                 android:title="Edit Profile"/>
         <item
                 android:id="@+id/nav_slideshow"
-                android:icon="@drawable/ic_menu_slideshow"
                 android:title="Gantry Passages"/>
         <item
                 android:id="@+id/nav_tools"
-                android:icon="@drawable/ic_menu_manage"
                 android:title="Settings"/>
         <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send"/>
+                android:title="Logout"/>
     </group>
-    
+
 </menu>
