--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <gradient
-            android:angle="135"
-            android:centerColor="@color/cardview_shadow_start_color"
-            android:endColor="@color/KapschOrange"
-            android:startColor="@color/KapschOrange"
+            android:angle="0"
+            android:centerColor="@color/KapschOrange"
+            android:endColor="@color/cardview_shadow_start_color"
+            android:startColor="@color/cardview_shadow_start_color"
             android:type="linear"/>
 </shape>
