--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -9,16 +9,32 @@
               android:background="#fcfcfc"
               android:gravity="center">
 
-
-    <TextView
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/KapschOrange"
-            android:layout_gravity="center"
-            android:layout_marginTop="-60dp"
-            android:textSize="18dp"
-            android:text="Edit User Information"
-            android:textStyle="bold" />
+            android:orientation="horizontal" >
+        <android.support.v7.widget.AppCompatImageView
+                android:layout_marginLeft="120dp"
+                android:layout_width="130dp"
+                android:layout_height="44dp"
+                android:background="@drawable/kapscharrow"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="130dp"
+                android:textSize="18dp"
+                android:textColor="@color/KapschOrange"
+                android:text="Edit user info"
+                android:textStyle="bold" />
+    </LinearLayout>
+
 
     <LinearLayout
             android:clipToPadding="false"
