--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -19,7 +19,7 @@
                 android:layout_width="130dp"
                 android:layout_height="44dp"
                 android:background="@drawable/kapscharrow"/>
-    </LinearLayout>>
+    </LinearLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:textColor="@color/KapschOrange"
                 android:text="Registration for TOLLGATE v0.01"
                 android:textStyle="bold" />
-    </LinearLayout>>
+    </LinearLayout>
 
     <LinearLayout
             android:clipToPadding="false"
@@ -270,7 +270,7 @@
     <Button
             android:text="Confirm Registration"
             android:layout_marginRight="-2dp"
-            android:background="@color/cardview_light_background"
+            android:background="#000000"
             android:textColor="@color/KapschOrange"
             android:layout_width="300dp"
             android:layout_height="wrap_content" android:id="@+id/button"/>
