--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -1,281 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context=".Fragments.Register"
-              android:orientation="vertical"
-              android:padding="10dp"
-              android:background="#fcfcfc"
-              android:gravity="center">
-
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-        <android.support.v7.widget.AppCompatImageView
-                android:layout_marginLeft="110dp"
-                android:layout_width="130dp"
-                android:layout_height="44dp"
-                android:background="@drawable/kapscharrow"/>
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="56dp"
-                android:shadowColor="#000000"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="14"
-                android:textSize="18dp"
-                android:textColor="@color/KapschOrange"
-                android:text="Registration for TOLLGATE v0.01"
-                android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-            android:clipToPadding="false"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-                android:clickable="true"
-                android:id="@+id/Register"
-                android:layout_width="400dp"
-                android:layout_height="340dp"
-                android:layout_margin="10dp">
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:showIn="@layout/app_bar_main2"
+        tools:context=".Main2Activity">
 
 
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
-
-                <TextView
-                        android:id="@+id/TextViewUsername"
-                        android:layout_width="9dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Username:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/Username"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/TextViewPassword"
-                        android:layout_width="9dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Password:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/Password"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPassword"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="80dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/TextViewConfirmPassword"
-                        android:layout_width="9dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Confirm Password:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/PasswordConfirmation"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPassword"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="120dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/TextViewEmail"
-                        android:layout_width="-10dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Email:"
-                        android:textStyle="italic"/>
-
-                <EditText
-                        android:id="@+id/EmailAdress"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textEmailAddress"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="200dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/LastName"
-                        android:layout_width="13dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Last Name:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/UserLastName"
-                        android:layout_width="130dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="160dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/FirstName"
-                        android:layout_width="16dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="First Name:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/UserFirstName"
-                        android:layout_width="130dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="240dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/BillingAddress"
-                        android:layout_width="-10dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Address:"
-                        android:textStyle="italic"/>
-
-                <EditText
-                        android:id="@+id/UserBillingAddress"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPostalAddress"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="280dp"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/PersonalID"
-                        android:layout_width="33dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18dp"
-                        android:text="Personal ID:"
-                        android:textStyle="italic"
-                        android:layout_weight="1"/>
-
-                <EditText
-                        android:id="@+id/UserPersonalSocialNumber"
-                        android:layout_width="140dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="40dp"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textShortMessage"/>
-            </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
-    <Button
-            android:text="Confirm Registration"
-            android:layout_marginRight="-2dp"
-            android:background="@color/cardview_light_background"
-            android:textColor="@color/KapschOrange"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content" android:id="@+id/button"/>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
