--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,15 +3,29 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/KapschOrange</item>
-        <item name="colorPrimaryDark">@color/KapschOrange</item>
+        <item name="colorPrimary">#000000</item>
+        <item name="colorPrimaryDark">#000000</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColor">@color/KapschOrange</item>
+        <item name="android:textColorPrimary">@color/KapschOrange</item>
+        <item name="android:textColorSecondary">@color/KapschOrange</item>
+        <item name="android:actionMenuTextColor">@color/KapschOrange</item>
+    </style>
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+    <style name="MyActionBarTitleText"
+           parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/KapschOrange</item>
+        <item name="android:textColorPrimary">@color/KapschOrange</item>
+        <item name="android:textColorSecondary">@color/KapschOrange</item>
+        <item name="android:actionMenuTextColor">@color/KapschOrange</item>
+    </style>
 
 </resources>
