--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <gradient
-            android:angle="0"
-            android:centerColor="@color/KapschOrange"
+            android:angle="-90"
+            android:centerColor="#000000"
             android:endColor="#000000"
             android:startColor="#000000"
             android:type="linear"/>
