--- a/app/src/main/res/layout/fragment_choose_login_register.xml
+++ b/app/src/main/res/layout/fragment_choose_login_register.xml
@@ -9,21 +9,23 @@
               android:background="#fcfcfc"
               android:gravity="center">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="-100dp"
-            android:textSize="30dp"
-            android:text="TOLLGATE v0.01"
-            android:textColor="@color/cardview_dark_background"
-            android:textStyle="bold" />
+            android:layout_marginTop="-80dp"
+            android:orientation="horizontal" >
+        <android.support.v7.widget.AppCompatImageView
+                android:layout_marginLeft="130dp"
+                android:layout_width="130dp"
+                android:layout_height="44dp"
+                android:background="@drawable/kapscharrow"/>
+    </LinearLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="40dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -38,6 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:background="#000000"
                     android:orientation="vertical">
 
                 <TextView
@@ -45,7 +48,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="0dp"
                         android:textSize="30dp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/KapschOrange"
                         android:text="Login"
                         android:textStyle="normal" />
 
@@ -71,6 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:background="#000000"
                     android:orientation="vertical">
 
                 <TextView
@@ -78,7 +82,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="0dp"
                         android:textSize="30dp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/KapschOrange"
                         android:text="Register"
                         android:textStyle="normal" />
 
