--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,15 +9,33 @@
               android:background="#fcfcfc"
               android:gravity="center">
 
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-100dp"
+            android:orientation="horizontal" >
+        <android.support.v7.widget.AppCompatImageView
+                android:layout_marginLeft="130dp"
+                android:layout_width="130dp"
+                android:layout_height="44dp"
+                android:background="@drawable/kapscharrow"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:orientation="horizontal" >
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="-60dp"
-            android:textColor="@color/KapschOrange"
+            android:layout_marginLeft="126dp"
+            android:textColor="#000000"
             android:textSize="18dp"
             android:text="TOLLGATE v0.01"
             android:textStyle="bold" />
+
+    </LinearLayout>
 
     <LinearLayout
             android:clipToPadding="false"
@@ -106,7 +124,7 @@
     <Button
             android:text="Login"
             android:textColor="@color/KapschOrange"
-            android:background="@color/cardview_light_background"
+            android:background="#000000"
             android:layout_width="200dp"
             android:layout_height="wrap_content" android:id="@+id/button"/>
 </LinearLayout>
