--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,14 +11,14 @@
 
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-        <android.support.v7.widget.AppCompatImageView
-                android:layout_marginLeft="110dp"
-                android:layout_width="130dp"
-                android:layout_height="44dp"
-                android:background="@drawable/kapscharrow"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+    <android.support.v7.widget.AppCompatImageView
+            android:layout_marginLeft="110dp"
+            android:layout_width="130dp"
+            android:layout_height="44dp"
+            android:background="@drawable/kapscharrow"/>
     </LinearLayout>
 
     <LinearLayout
@@ -31,7 +31,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="56dp"
                 android:textSize="18dp"
-                android:textColor="@color/KapschOrange"
+                android:textColor="#000000"
                 android:text="Registration for TOLLGATE v0.01"
                 android:textStyle="bold" />
     </LinearLayout>
@@ -48,8 +48,6 @@
                 android:layout_width="400dp"
                 android:layout_height="340dp"
                 android:layout_margin="10dp">
-
-
 
             <LinearLayout
                     android:layout_width="match_parent"
