--- a/app/src/main/res/layout/fragment_start_travel.xml
+++ b/app/src/main/res/layout/fragment_start_travel.xml
@@ -8,13 +8,27 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="240dp"
+            android:orientation="horizontal" >
+        <android.support.v7.widget.AppCompatImageView
+                android:layout_marginLeft="140dp"
+                android:layout_width="130dp"
+                android:layout_height="44dp"
+                android:background="@drawable/kapscharrow"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="-40dp"
+            android:layout_marginTop="-30dp"
             android:orientation="vertical"
             android:gravity="center">
 
         <Button
                 android:text="Start Travel"
+                android:background="#000000"
+                android:textColor="@color/KapschOrange"
                 android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:id="@+id/button"/>
