--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -24,6 +24,7 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/KapschOrange"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:text="@string/nav_username"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
@@ -31,6 +32,7 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/KapschOrange"
             android:text="@string/nav_email"
             android:id="@+id/textView"/>
 
