--- a/app/src/main/res/layout/fragment_default_travel.xml
+++ b/app/src/main/res/layout/fragment_default_travel.xml
@@ -17,12 +17,12 @@
 
         <TextView
                 android:layout_width="9dp"
+                android:textColor="#000000"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="60dp"
                 android:layout_marginTop="10dp"
-                android:textSize="18dp"
+                android:textSize="24dp"
                 android:text="You are now in travel mode"
-                android:textStyle="italic"
                 android:layout_weight="1"/>
 
     </LinearLayout>
@@ -50,8 +50,9 @@
                 <TextView
                     android:id="@+id/TextViewCord"
                     android:layout_width="9dp"
+                    android:textColor="#000000"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="60dp"
+                    android:layout_marginLeft="62dp"
                     android:layout_marginTop="10dp"
                     android:textSize="18dp"
                     android:text="Cordinates: "
@@ -61,11 +62,12 @@
                 <TextView
                         android:id="@+id/TextViewCord2"
                         android:layout_width="9dp"
+                        android:textColor="#000000"
                         android:layout_height="match_parent"
                         android:layout_marginRight="160dp"
                         android:layout_marginTop="10dp"
                         android:textSize="18dp"
-                        android:text="X.X.X"
+                        android:text="xx.xxx.xx"
                         android:textStyle="italic"
                         android:layout_weight="1"/>
 
@@ -80,8 +82,9 @@
                 <TextView
                         android:id="@+id/TextViewGantry"
                         android:layout_width="9dp"
+                        android:textColor="#000000"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="60dp"
+                        android:layout_marginLeft="62dp"
                         android:layout_marginTop="10dp"
                         android:textSize="18dp"
                         android:text="Closest gantry: "
@@ -91,11 +94,12 @@
                 <TextView
                         android:id="@+id/TextViewClosestGantry"
                         android:layout_width="9dp"
+                        android:textColor="#000000"
                         android:layout_height="match_parent"
                         android:layout_marginRight="100dp"
                         android:layout_marginTop="10dp"
                         android:textSize="18dp"
-                        android:text="xM"
+                        android:text="xxx meters"
                         android:textStyle="italic"
                         android:layout_weight="1"/>
 
@@ -109,6 +113,8 @@
 
                 <Button
                         android:text="Show map"
+                        android:textColor="@color/KapschOrange"
+                        android:background="#000000"
                         android:layout_marginTop="60dp"
                         android:layout_marginLeft="60dp"
                         android:layout_width="300dp"
@@ -124,6 +130,8 @@
 
                 <Button
                         android:text="Stop travel"
+                        android:textColor="@color/KapschOrange"
+                        android:background="#000000"
                         android:layout_marginTop="60dp"
                         android:layout_marginLeft="60dp"
                         android:layout_width="300dp"
