--- a/app/src/main/res/layout/fragment_invoice.xml
+++ b/app/src/main/res/layout/fragment_invoice.xml
@@ -2,9 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="80dp"
-              android:background="@color/colorAccent"
-              android:id="@+id/invoice_background"
+              android:background="#000000"
+              android:padding="3dp"
               android:orientation="horizontal">
+
+    <LinearLayout android:orientation="vertical"
+                  android:background="#FFFFFF"
+                  android:id="@+id/invoice_background"
+                  android:layout_width="match_parent"
+                  android:layout_height="78dp">
 
     <TextView
             android:text="Created: "
@@ -15,8 +21,8 @@
 
     <TextView
             android:id="@+id/item_number"
-            android:layout_marginLeft="-10dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="82dp"
+            android:layout_marginTop="-38dp"
             android:text="x.x.x.x"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,8 +30,7 @@
 
     <TextView
             android:text="Due Date: "
-            android:layout_marginLeft="-116dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"/>
@@ -33,7 +38,8 @@
     <TextView
             android:id="@+id/due_date"
             android:text="x.x.x.x"
-            android:layout_marginTop="32dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="-22dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"/>
@@ -41,8 +47,8 @@
     <TextView
             android:text="To Pay:"
             android:textSize="22dp"
-            android:layout_marginTop="26dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginTop="-34dp"
+            android:layout_marginLeft="190dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"/>
@@ -51,8 +57,8 @@
             android:id="@+id/invoice_payment"
             android:text="xxx sek"
             android:textSize="22dp"
-            android:layout_marginTop="26dp"
-            android:layout_marginLeft="4dp"
+            android:layout_marginTop="-30dp"
+            android:layout_marginLeft="267dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceListItem"/>
@@ -63,4 +69,5 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem"/>
+    </LinearLayout>
 </LinearLayout>
