--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -17,7 +17,7 @@
             android:layout_width="100dp"
             android:layout_height="37dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:background="@drawable/kapscharrow"
+            android:background="@drawable/kapscharrowoutline"
             android:contentDescription="@string/nav_header_desc"
             android:id="@+id/imageView"/>
 
