--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -6,18 +6,21 @@
     <group android:checkableBehavior="single">
         <item
                 android:id="@+id/nav_home"
+                android:title="Home"/>
+        <item
+                android:id="@+id/nav_invoices"
                 android:title="My Invoice"/>
+        <!--<item-->
+                <!--android:id="@+id/nav_edit_profile"-->
+                <!--android:title="Edit Profile"/>-->
         <item
-                android:id="@+id/nav_gallery"
-                android:title="Edit Profile"/>
-        <item
-                android:id="@+id/nav_slideshow"
+                android:id="@+id/nav_passages"
                 android:title="Gantry Passages"/>
+        <!--<item-->
+                <!--android:id="@+id/nav_settings"-->
+                <!--android:title="Settings"/>-->
         <item
-                android:id="@+id/nav_tools"
-                android:title="Settings"/>
-        <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_logout"
                 android:title="Logout"/>
     </group>
 
